working list site, improved styles and dataset

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
+  height: 100vh;
   display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-gap: 20px;
+  background-color: red;
 }
 
-
-.temp-images {
-  height: 200px;
+.App main {
+  overflow: auto;
 }
