--- a/src/HeroList.css
+++ b/src/HeroList.css
@@ -1,7 +1,11 @@
 .HeroList {
+
+  color: white;
+  margin: 0;
   display: grid;
-  grid-template-columns: 50px 1fr;
-  grid-gap: 20px;
-  padding: 20px;
-  align-items: center
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 35px;
+  padding: 0 20px;
+  
+
 }
