--- a/src/HeroItem.css
+++ b/src/HeroItem.css
@@ -1,11 +1,25 @@
 .HeroItem {
+  
+  border: 4px solid gold;
+  border-radius: 10px;
+  padding: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
+  grid-template-rows: 30px 120px 20px;
+  grid-gap: 10px;
+  justify-content: center;
 }
 
-img {
+.HeroItem h2 {
+  margin: 0;
+}
+
+.HeroItem img {
   height: 100%;
   width: 100%;
   object-fit: contain;
-  grid-template-rows: 30px 120px 20px;
+}
+
+.HeroItem p {
+  margin: 0;
+  font-size: 1rem;
 }
